tests/semantic/pass/label-goto.c
int main() {

  while(1) {
    goto stop;
  }

  stop : ;
}
