tests/semantic/fail/label-fail.c
int main() {
  s1: ;

  while(1) {
    s1: ;
  }
}
